# EA5013-v2-screen

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/lvgl/: lv_conf.h
components/lvgl/porting/: lv_port_disp.c  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c
components/lvgl_esp32_drivers/: i2c_bus.c
main/: CMakeLists.txt  clock_config.h  idf_component.yml  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  main.c  screen_control.c  screen_control.h
third_pt_components/lvgl_esp32_drivers/include/: bsp_board.h
